<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ProductDetail">

    <!-- Back Button Nav -->
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/view_detail_nav"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:alignItems="center">

        <!-- Back Button -->
        <ImageButton
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:onClick="onNavigateBackToMenuButtonClicked"
            android:scaleType="centerInside"
            android:src="@drawable/vector_back" />
    </com.google.android.flexbox.FlexboxLayout>

    <!-- Product Detail -->
    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/view_detail_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_detail_nav"
        android:layout_margin="10dp"
        android:padding="5dp"
        app:flexDirection="column">

        <!-- Product Image -->
        <ImageView
            android:id="@+id/view_detail_image"
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:scaleType="fitXY" />

        <!-- Product Detail Information -->
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:flexDirection="column">

            <TextView
                android:id="@+id/view_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/product_name_fallback"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/component_price_label"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/view_detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/product_price_fallback"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:text="@string/component_stock_label"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/view_detail_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/product_stock_fallback"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>
        </com.google.android.flexbox.FlexboxLayout>
    </com.google.android.flexbox.FlexboxLayout>

    <!-- Add To Cart Button -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:onClick="onCheckoutButtonClicked"
        android:padding="5dp"
        android:text="@string/component_checkout_button"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>